# NAI

./: .gitignore  CMakeLists.txt
Zaj1/: hc.cpp
Zaj10/: graph.dot  zaj10.cpp
Zaj11/: graph.dot  zaj11.cpp
Zaj12/: zaj12.cpp
Zaj14/: data.txt  zaj14.cpp
Zaj2/: hc.cpp
Zaj3/: SimulatedAnnealing.cpp
Zaj3/data/: data.txt
Zaj4/: zaj4.cpp
Zaj6/: openCV_lab6.cpp
Zaj7/: openCV_lab7.cpp
Zaj8/: opencv_lab8.cpp
