cmake_minimum_required(VERSION 3.17)
project(NAI)

set(CMAKE_CXX_STANDARD 20)

add_executable(zaj1 Zaj1/zad1.cpp)
add_executable(zaj2 Zaj2/hc.cpp)
add_executable(zaj3 Zaj3/SimulatedAnnealing.cpp)
add_executable(zaj4 Zaj4/zaj4.cpp)
add_executable(zaj10 Zaj10/zaj10.cpp)
add_executable(zaj11 Zaj11/zaj11.cpp)
add_executable(zaj12 Zaj12/zaj12.cpp)
add_executable(zaj13 Zaj13/zaj13.cpp)
